# fwip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
mcp-server/: README.md  package-lock.json  package.json
python/: pyproject.toml
python/fwip/: __init__.py  adapt.py  registry.py
python/fwip/helpers/: __init__.py  language.py
python/fwip/models/: __init__.py  _base.py  claude.py  deepseek.py  gemini.py  glm.py  kimi.py  llama.py  minimax.py  mistral.py  nemotron.py  openai.py  qwen.py
python/refrase/: __init__.py  adapt.py  engine.py  registry.py  types.py
python/refrase/configs/: __init__.py  claude.json  deepseek.json  glm.json  kimi.json  llama.json  minimax.json  nemotron.json  openai.json  qwen.json
python/refrase/helpers/: __init__.py  json_reinforcement.py  simplify.py  xml.py
python/refrase/models/: __init__.py  _base.py  claude.py  deepseek.py  gemini.py  glm.py  kimi.py  llama.py  minimax.py  mistral.py  nemotron.py  openai.py  qwen.py
python/refrase/transforms/: __init__.py  append_text.py  constraint_reorder.py  grounding.py  json_reinforce.py  language_enforce.py  markdown_structure.py  nested_object_fix.py  prepend_text.py  self_verify.py  simplify.py  suppress_markers.py  thinking_prefix.py  type_reinforce.py  xml_wrap.py
python/tests/: conftest.py  test_adapt.py  test_fixtures.json  test_helpers.py  test_registry.py
python/tests/test_models/: test_claude.py  test_deepseek.py  test_mistral.py  test_qwen.py  test_remaining.py
scripts/: record-demo-screenshots.ts  stitch-gif.py  sync-configs.sh
tests/: check-api.ts  (+4 more)
(+58 files in other folders)
